...
    <string name="ui_subjects">Subjects</string>
    <string name="ui_lesson">Lesson</string>
    <string name="ui_lessons">Lessons</string>
    <string name="ui_chapter">Chapter</string>
    <string name="ui_cards">Cards</string>
    <string name="ui_summary">Summary</string>
    <string name="ui_history">History</string>
    <string name="ui_due">Due</string>
    <string name="ui_next">Next</string>
    <string name="ui_now">Now</string>
    <string name="ui_later">Later</string>
    <string name="ui_none">None</string>
    <string name="ui_question">Question</string>
...
